# rb-web

./: .gitignore  CMakeLists.txt  README.md  config.ini  main.cpp
.github/workflows/: release.yml
error_directory/: 404.html
include/: Config.h  HttpProtocolData.h  Logger.h  LoggerDefineInit.h  ReadData.h  TcpListener.h  Version.h  Version.h.in  VersionServer.h  WebServer.h
logs/: log.txt
src/: Config.cpp  Logger.cpp  ReadData.cpp  TcpListener.cpp  Version.cpp  VersionServer.cpp  WebServer.cpp  main.cpp
www/: index.html
wwwerror/: 404.html
